# BVCC_QUIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  WhatIsThis.md  libbvcquic_api_guide.md
libbvcquic/: CMakeLists.txt
libbvcquic/include/: bvc_quic.h  bvcq_internal.h
libbvcquic/src/: config.c  connection.c  datagram.c  events.c  evqueue.c  init.c  keylog.c  listener.c  platform.c  registration.c  stream.c  tables.c  util.c
tests/: CMakeLists.txt  test_alpn_mismatch.c  test_cert_defer.c  test_datagram_echo.c  test_datagrams.c  test_errors.c  test_events_api.c  test_events_client_connect.c  test_handshake_info.c  test_keylog_flag.c  test_msquic_credload.c  test_msquic_roles.c  test_shutdown_order.c  test_smoke.c  test_stats.c  test_stats_activity.c  test_stream_backpressure.c  test_stream_io.c  test_stream_many.c  test_stream_read_enable.c  test_util.c  test_util.h
tooling/: build_all.sh  build_deps.sh  build_dist.sh  build_lib.sh  build_test.sh
